@@ -10,6 +10,7 @@
 - Feature: [OpenMusic#50] Added Rock style 4 ride music.
 - Change: [#20790] Default ride price set to free if park charges for entry.
 - Change: [#20880] Restore removed default coaster colours.
+- Change: [#21102] The money effect will now update even when the game is paused.
 - Fix: [#12299] Placing ride entrances/exits ignores the Disable Clearance Checks cheat.
 - Fix: [#13473] Guests complain that the default Circus price is too high.
 - Fix: [#15293] TTF fonts don’t format correctly with OpenGL.
